data/Java/09-use-undeclared-variable/5/[M]Error.txt
*https://docs.oracle.com/javase/tutorial/java/javaOO/objectcreation.html
Rectangle.java:4: error: cannot find symbol
        origin = new Point(0, 0);
        ^